Add header and footer.
add header and footer content
add style to header and footer
add style to body

--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
     <link href="./styles.css" rel="stylesheet" />
     <script src="./script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div id="header">
+      <h1>Tic Tac Toe</h1>
+    </div>
+    <div id="main-page"></div>
+    <div id="footer">
+      <p>created by ~ <span>Dev Siwach</span></p>
+    </div>
+  </body>
 </html>
