Add new game button and style it

--- a/index.html
+++ b/index.html
@@ -11,7 +11,28 @@
     <div id="header">
       <h1>Tic Tac Toe</h1>
     </div>
-    <div id="main-page"></div>
+    <div id="main-page">
+      <div id="newGame">
+        <button type="button" id="newGameButton">New Game</button>
+      </div>
+      <dialog id="newGameDialog">
+        <div id="newGameDialogDiv">
+          <input
+            type="text"
+            name="playerOneName"
+            value="playerOne"
+            id="playerOneNameInput"
+          />
+          <input
+            type="text"
+            name="playerTwoName"
+            value="playerTwo"
+            id="playerTwoNameInput"
+          />
+        </div>
+      </dialog>
+      <div id="gameBoard"></div>
+    </div>
     <div id="footer">
       <p>created by ~ <span>Dev Siwach</span></p>
     </div>
