--- a/index.html
+++ b/index.html
@@ -7,42 +7,5 @@
     <link href="./styles.css" rel="stylesheet" />
     <script src="./script.js" defer></script>
   </head>
-  <body>
-    <div id="header">
-      <h1>Tic Tac Toe</h1>
-    </div>
-    <div id="main-page">
-      <div id="newGame">
-        <button type="button" id="newGameButton">New Game</button>
-      </div>
-      <dialog id="newGameDialog">
-        <div id="newGameDialogDiv">
-          <div id="dialogInputs">
-            <input
-              type="text"
-              name="playerOneName"
-              value="playerOne"
-              id="playerOneNameInput"
-            />
-            <input
-              type="text"
-              name="playerTwoName"
-              value="playerTwo"
-              id="playerTwoNameInput"
-            />
-          </div>
-          <div id="dialogButtons">
-            <button type="button" id="startGameButton">Start</button>
-            <button type="button" id="closeDialogButton" autofocus>
-              Close
-            </button>
-          </div>
-        </div>
-      </dialog>
-      <div id="gameBoard"></div>
-    </div>
-    <div id="footer">
-      <p>created by ~ <span>Dev Siwach</span></p>
-    </div>
-  </body>
+  <body></body>
 </html>
